k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: order-fulfillment
  labels:
    name: order-fulfillment
    app.kubernetes.io/managed-by: argocd
